<?xml version="1.0"?>
<package format="3">
  <name>can_msgs</name>
  <version>0.1.0</version>
  <description>ROS 2 message definitions for CAN frames</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>

  <!-- <depend>builtin_interfaces</depend> -->
  <depend>std_msgs</depend>
  <!-- <depend>rosidl_default_generators</depend> -->

  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>